--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --primary: #2A7AE4;
+  --primary: #e42a2a;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
@@ -23,3 +23,11 @@ body {
 a {
   color: inherit;
 } 
+
+#root{
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  background: peru;
+  display: flex;
+  flex-direction: column;
+
+}
